--- a/main.tex
+++ b/main.tex
@@ -19,6 +19,7 @@
     \input{chapter5.tex}
     \input{chapter6.tex}
     \input{chapter7.tex}
+    \input{chapter8.tex}
 
     \printbibliography[title=References]
 \end{document}
