--- a/main.tex
+++ b/main.tex
@@ -12,14 +12,14 @@
 \begin{document}
     \maketitle
     \tableofcontents
-    \input{chapter1.tex}
-    \input{chapter2.tex}
-    \input{chapter3.tex}
-    \input{chapter4.tex}
-    \input{chapter5.tex}
-    \input{chapter6.tex}
-    \input{chapter7.tex}
-    \input{chapter8.tex}
+    \input{contents/chapter1.tex}
+    \input{contents/chapter2.tex}
+    \input{contents/chapter3.tex}
+    \input{contents/chapter4.tex}
+    \input{contents/chapter5.tex}
+    \input{contents/chapter6.tex}
+    \input{contents/chapter7.tex}
+    \input{contents/chapter8.tex}
 
     \printbibliography[title=References]
 \end{document}
