--- a/preamble.sty
+++ b/preamble.sty
@@ -41,6 +41,7 @@
 \DeclareMathOperator{\offset}{Offset}
 \DeclareMathOperator{\eval}{ev}
 \DeclareMathOperator{\const}{const}
+\DeclareMathOperator{\Sub}{Sub}
 %% Categories
 \newcommand{\func}[2]{[#1,#2]}
 \newcommand{\expob}[2]{{#2}^{#1}}
