changed config file to a submodule

--- a/contents/chapter7.tex
+++ b/contents/chapter7.tex
@@ -74,7 +74,7 @@
     Show that the following are equivalent for each small category $\Ccal$:
     \begin{equivalent}
         \item $\Ccal$ has binary products.
-        \item For each pair of object $A$ and $B$ in $\Ccal$ the presheaf $yA\times yB$ is representable in $\presheaf{\Ccal}$.
+        \item For each pair of objects $A$ and $B$ in $\Ccal$ the presheaf $yA\times yB$ is representable in $\presheaf{\Ccal}$.
     \end{equivalent}
     Can you generalize the statement in this and \ref{ex:56} to general limits?
 \end{exercise}
