--- a/contents/chapter8.tex
+++ b/contents/chapter8.tex
@@ -61,3 +61,44 @@
             of inclusion maps, so $i_A\leq i_B$.
     \end{proof}
 \end{solution}
+
+\begin{exercise}{60}
+    Let $(P,\leq)$ be a preorder. For $p\in P$ we let $\downarrow p =\{q\in P\mid q\leq p\}$.
+    Show that sieves on $p$ can identified with downward closed subsets of $\downarrow p$.
+    If we denote the unique arrow $q\to p$ by $qp$ and $U$ is a downwards closed subset of $\downarrow p$, what is $(qp)^*U$?
+\end{exercise}
+\begin{solution}
+    \begin{proof}
+        
+    \end{proof}
+\end{solution}
+
+\begin{exercise}{61}
+    Let $\Ccal$ be a small category.
+    Show that the power object in the category of presheaves on $\Ccal$ can be identified as follows $\Pcal(X)(C)=\Sub(X\times y_C)$ and that for $f\colon C'\to C$, $\Pcal(X)(f)(U)=(\id_X\times y_f)^*(U)$.
+    Prove also that the element relation, as a subpresheaf $\in_X$ of $\Pcal(X)\times X$ is given by
+    \[ (\in_X)(C)=\{(U,x)\in\Sub(y_C\times X)\times X(C)\mid(\id_C,x)\in U(C)\}. \]
+\end{exercise}
+\begin{solution}
+    \begin{proof}
+        
+    \end{proof}
+\end{solution}
+
+\begin{exercise}{62}
+    
+\end{exercise}
+\begin{solution}
+    \begin{proof}
+        
+    \end{proof}
+\end{solution}
+
+\begin{exercise}{63}
+    
+\end{exercise}
+\begin{solution}
+    \begin{proof}
+        
+    \end{proof}
+\end{solution}
