--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 
-\usepackage{preamble}
-\usepackage{letterstyles}
+\usepackage{latex-config/preamble}
+\usepackage{latex-config/letterstyles}
 
 \title{\scshape CTf22: Solutions}
 \author{Yoav Eshel, 12973351\\
