--- a/main.tex
+++ b/main.tex
@@ -11,7 +11,7 @@
 
 \begin{document}
     \maketitle
-    \tableofcontents
+    %\tableofcontents
     \input{contents/chapter1.tex}
     \input{contents/chapter2.tex}
     \input{contents/chapter3.tex}
@@ -20,6 +20,8 @@
     \input{contents/chapter6.tex}
     \input{contents/chapter7.tex}
     \input{contents/chapter8.tex}
-
+    \input{contents/chapter9.tex}
+    \input{contents/chapter10.tex}
+    \input{contents/chapter11.tex}
     \printbibliography[title=References]
 \end{document}
